@@ -1,5 +1,7 @@
 2003-05-30  Bradley Bell  <btb@icculus.org>
 
+	* main/mission.c: improve mission loading
+
 	* main/ai.c, main/ai.h, main/gameseq.c, main/newmenu.c,
 	main/state.c: use physfs for savegames
 
